Submitted latest version

--- a/vocabspa-war/src/main/webapp/add.html
+++ b/vocabspa-war/src/main/webapp/add.html
@@ -4,5 +4,6 @@
     <input type="text" name="ntv">
     <input type="button" value="Save" onclick="App.addEntry()">
     <input type="button" value="Back to dictionaries" onclick="App.displayDicts()">
+    <input type="button" value="Test Jackson" onclick="App.getJSON()">
     <span id="saveActionOutcome"></span>
 </form>
