Double click to toggle active for search inputs

--- a/vocabspa-war/src/main/webapp/add.html
+++ b/vocabspa-war/src/main/webapp/add.html
@@ -26,15 +26,15 @@
 <div id="addOns" style="display: none">
     <span>Add Ons</span>
     <form name="addOnsForm">
-        <div class="txtInput" id="frnLookupInput">
+        <div class="txtInput" id="frnLookupInput" ondblclick="App.toggleTextInputs(this)">
             <input type="text" name="frnL">
         </div>
 
-        <div class="txtInput" id="prnLookupInput">
+        <div class="txtInput" id="prnLookupInput" ondblclick="App.toggleTextInputs(this)">
             <input type="text" name="prnL">
         </div>
 
-        <div class="txtInput" id="ntvLookupInput">
+        <div class="txtInput" id="ntvLookupInput" ondblclick="App.toggleTextInputs(this)">
             <input type="text" name="ntvL">
         </div>
 
