Add on boxes. Ready to start implementing dragging

--- a/vocabspa-war/src/main/webapp/add.html
+++ b/vocabspa-war/src/main/webapp/add.html
@@ -41,7 +41,9 @@
         <div class="btnActions" id="lookupActions">
             <input type="button" value="Look Up" onclick="Vocapp.lookUp()">
             <input type="button" value="Hide Add Ons" onclick="Vocapp.hideAddOns()">
-            <div id="lookupActionOutcome"></div>
         </div>
+        <div class="addonLinks" id="addonSynonyms"></div>
+        <div class="addonLinks" id="addonGroups"></div>
+        <div id="lookupActionOutcome"></div>
     </form>
 </div>
